# lascra

./: .gitignore  CMakeLists.txt  MySprite.sprite3  README.md  Sprite2.sprite3  idea.txt  join_sample.txt  lascra.sb3  procedure.json  test.ls  test.sb3  test.sprite3  test1  test2
.github/workflows/: buildexamples.yml  buildmacos.yml  buildwindows.yml
docs/: CODE.md  PARAM.md  README.md  STRUCTURE.md  TOP.md
examples/: README.md  allblocks.scra  allbools.scra  allgeneric.scra  ask.scra  boolean.scra  broadcast.scra  cblock.scra  clone.scra  comment.scra  define.scra  elif.scra  error.scra  example.scra  extentions.scra  forever.scra  function.scra  helloworld.scra  ifelse.scra  issue1.scra  issue2.scra  list.scra  looks.scra  macro.scra  motion.scra  parameters.scra  pen.scra  procedure.scra  repeat.scra  stop.scra  when.scra
src/: CMakeLists.txt  block.cxx  block.hxx  checknum.cxx  checknum.hxx  code.cxx  code.hxx  compiler.cxx  compiler.hxx  declare.cxx  declare.hxx  define.cxx  define.hxx  error.cxx  error.hxx  find.cxx  find.hxx  id.cxx  id.hxx  lascra.html  macro.cxx  macro.hxx  main.cxx  parameter.cxx  parameter.hxx  procedure.cxx  procedure.hxx  when.cxx  when.hxx
